--- a/preface.tex
+++ b/preface.tex
@@ -29,7 +29,7 @@ Rob Ruigrok was doing his master's thesis at the same time
 and helped me to avoid problems he encountered before I experienced them as well and
 I am grateful for this help.
 I am also very thankful for the companionship I felt within my work room 
-and I would like to thank especially Hans van den Bigot BSc, Niels Doekemeijer BSc and Ernst van der Hoeven BSc.
+and I would like to thank especially Hans van den Bogert BSc, Niels Doekemeijer BSc and Ernst van der Hoeven BSc.
 You certainly made my work more enjoyable.
 
 \vspace{1\baselineskip}
