--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -2,26 +2,24 @@
 A reputation system is a necessity in a collaborative network like peer-to-peer filesharing.
 But the creation of a tamper-proof interaction history is a difficult undertaking,
 as seen as by several attempts in related work with varying success.
-This first step, in an incremental approach to creating a new data structure
-that can be used as a tamper-proof interaction history, is further testimony to that statement.
-But MultiChain is a proof-of-concept that takes a different approach with multiple chains
+This first step, in an incremental approach to creating a new tamper-proof interaction history,
+is further testimony to that statement.
+MultiChain is a proof-of-concept that takes a different approach with multiple chains
 instead of a single chain can be succesful in creating a reputation system
 
 A scalable system has been introduced that can track interactions.
 The system does not rely on any central component or a central data structure.
-This system has been succesfully integrated with Tribler.
+This system has been integrated with Tribler, but this requires more attention.
 MultiChain can be released as a first version to start measuring the system in the real world.
 Improvements can be implemented using these measurements.
 
 MultiChain has been tested in software engineering tests and experiments.
 These tests prove the system to be correctly working as designed.
 The experiments show that MultiChain to behave as expected in a real world scenario.
-MultiChain tracks the interactions between multiple nodes correctly in these scenario's.
+MultiChain shows promise in tracking the interactions in a scalable way.
 
 The current implementation is not yet ready to fully replace BarterCast as a reputation system.
 It is too vulnerable for malicious nodes to attack the system.
 The possibility and impact of these attacks have to be reduced
 before MultiChain can be fully used as a reputation system with a reasonable amount of trust.
 Proposals are already made and worked on to harden the system in the future.
-
-
